--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cafe
 server.port=8383
 
-spring.datasource.url=jdbc:mysql://172.30.1.250:3306/mini_pjt_1?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://172.30.1.250:3306/mini_pjt_1?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=pjt1
 spring.datasource.password=pjt1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -53,10 +53,3 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=email,profile
-
-#???? 20MB
-spring.servlet.multipart.max-file-size=30MB
-spring.servlet.multipart.max-request-size=50MB
-spring.servlet.multipart.enabled=true
-server.tomcat.max-swallow-size=50MB
-server.tomcat.max-http-form-post-size=50MB
